Add payhere payment method

--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,10 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
+        maven {
+            url  "https://repo.repsy.io/mvn/payhere/payhere-mobilesdk-android/"
+        }
+
     }
 }
 
